# Mathics3-user-guide

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  license.rst  manual.rst  mathics3-modules.rst  reference-of-built-in-symbols.rst  version-info.tex
docs/license/: gnu-general-public-license.rst  included-software-and-data.rst
docs/manual/: django-based-web-interface.rst  further-tutorial-examples.rst  introduction.rst  language-tutorial.rst
docs/reference-of-built-in-symbols/: arithmetic-functions.rst  assignments.rst  atomic-elements-of-expressions.rst  binary-data.rst  code-compilation.rst  colors.rst  compress-functions.rst  date-and-time.rst  definition-attributes.rst  descriptive-statistics.rst  directories-and-directory-operations.rst  distance-and-similarity-measures.rst  drawing-graphics.rst  evaluation-control.rst  expression-structure.rst  file-formats.rst  file-operations.rst  forms-of-input-and-output.rst  functional-programming.rst  functions-used-in-quantum-mechanics.rst  global-system-information.rst  graphics-and-drawing.rst  image-manipulation.rst  input-and-output.rst  inputoutput-files-and-filesystem.rst  integer-and-number-theoretical-functions.rst  integer-functions.rst  interactive-manipulation.rst  kernel-sessions.rst  layout.rst  list-functions.rst  low-level-format-definitions.rst  mathematical-functions.rst  mathematical-optimization.rst  matrices-and-linear-algebra.rst  message-related-functions.rst  numerical-functions.rst  operations-on-vectors.rst  options-management.rst  (+15 more)
generate/: doc2rst.py  rst_doc.py  testdata.py
(+1454 files in other folders)
